SF Primes/src/objects/Site_Type__c.object
<CustomObject>
    <description>List of possible Site Type attributes for an account</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporation_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Code__c</fullName>
        <label>Display Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>District Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Non_Sales_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Sales Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OOB_Duplicates_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OOB Duplicates Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLX_DealerSiteType_CreateDate__c</fullName>
        <label>SLX DealerSiteType CreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLX_DealerSite_Type_ID__c</fullName>
        <label>SLX DealerSite Type ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Code__c</fullName>
        <label>Segment Code</label>
        <picklist>
            <picklistValues>
                <fullName>AUTG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Type_Flag__c</fullName>
        <label>Site Type Flag</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Site Type</label>
    <listViews>
        <fullName>ActiveNAATSiteTypes</fullName>
        <columns>NAME</columns>
        <columns>Site_Type_Flag__c</columns>
        <columns>Active__c</columns>
        <columns>Non_Sales_Type__c</columns>
        <columns>OOB_Duplicates_Flag__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Display_Code__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segment_Code__c</field>
            <operation>equals</operation>
            <value>NAAT</value>
        </filters>
        <label>Active NAAT Site Types</label>
    </listViews>
    <listViews>
        <fullName>ActivePFWSiteTypes</fullName>
        <columns>NAME</columns>
        <columns>Site_Type_Flag__c</columns>
        <columns>Active__c</columns>
        <columns>Non_Sales_Type__c</columns>
        <columns>OOB_Duplicates_Flag__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Display_Code__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segment_Code__c</field>
            <operation>equals</operation>
            <value>PFW</value>
        </filters>
        <label>Active PFW Site Types</label>
    </listViews>
    <listViews>
        <fullName>Active_AUTG_Site_Types</fullName>
        <columns>NAME</columns>
        <columns>Site_Type_Flag__c</columns>
        <columns>Active__c</columns>
        <columns>Non_Sales_Type__c</columns>
        <columns>OOB_Duplicates_Flag__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Display_Code__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segment_Code__c</field>
            <operation>equals</operation>
            <value>AUTG</value>
        </filters>
        <label>Active AUTG Site Types</label>
    </listViews>
    <listViews>
        <fullName>AllSiteTypes</fullName>
        <columns>NAME</columns>
        <columns>Site_Type_Flag__c</columns>
        <columns>Active__c</columns>
        <columns>Non_Sales_Type__c</columns>
        <columns>OOB_Duplicates_Flag__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Display_Code__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Site Types</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DL_Specific_Site_Types</fullName>
        <columns>NAME</columns>
        <columns>Site_Type_Flag__c</columns>
        <columns>Active__c</columns>
        <columns>Non_Sales_Type__c</columns>
        <columns>OOB_Duplicates_Flag__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Display_Code__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Employee,Insurance,ADP Office</value>
        </filters>
        <label>DL Specific Site Types</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_Site_Types</fullName>
        <columns>NAME</columns>
        <columns>Site_Type_Flag__c</columns>
        <columns>Active__c</columns>
        <columns>Non_Sales_Type__c</columns>
        <columns>OOB_Duplicates_Flag__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Site Types</label>
    </listViews>
    <nameField>
        <label>Site Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>